fix: change header nav lists alignment

--- a/source/styles/blocks/nav.scss
+++ b/source/styles/blocks/nav.scss
@@ -20,6 +20,7 @@
     display: flex;
     flex-wrap: wrap;
     row-gap: 8px;
+    align-content: flex-start;
     width: unset;
     margin-inline: 12px 60px;
     border-top: none;
@@ -128,6 +129,7 @@
   flex-shrink: 0;
   flex-wrap: wrap;
   row-gap: 8px;
+  align-content: flex-start;
   max-width: 180px;
 
   @include media-tablet {
